Camera motion blur bug #72889

Closed
opened 2020-01-03 23:41:23 +01:00 by Andrey · 12 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Blender 2.81a

Short description of error
When you change the number of motion blur steps more than 1 for camera, it starts to work incorrectly

Cycles 1 steps
1 steps.jpg

Cycles 3 steps
3 steps.jpg

Cycles 8 steps
8 steps.jpg

Luxcore renderer 50 steps (in luxcore number of steps does not multiply, therefore such a large number)
Luxcore renderer 50 steps.jpg

.blend Camera motion blur bug.blend

Luxcore result looks much more accurate to me.
I also found some strange problem when I made camera object parent of 3D text, but I will talk about it later if necessary.

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Blender 2.81a **Short description of error** When you change the number of motion blur steps more than 1 for camera, it starts to work incorrectly Cycles 1 steps ![1 steps.jpg](https://archive.blender.org/developer/F8258874/1_steps.jpg) Cycles 3 steps ![3 steps.jpg](https://archive.blender.org/developer/F8258876/3_steps.jpg) Cycles 8 steps ![8 steps.jpg](https://archive.blender.org/developer/F8258880/8_steps.jpg) Luxcore renderer 50 steps (in luxcore number of steps does not multiply, therefore such a large number) ![Luxcore renderer 50 steps.jpg](https://archive.blender.org/developer/F8258882/Luxcore_renderer_50_steps.jpg) .blend [Camera motion blur bug.blend](https://archive.blender.org/developer/F8258884/Camera_motion_blur_bug.blend) Luxcore result looks much more accurate to me. I also found some strange problem when I made camera object parent of 3D text, but I will talk about it later if necessary.
Author

Added subscriber: @DEBIHOOD

Added subscriber: @DEBIHOOD
Author

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

edited

edited
Author

Changed status from 'Needs Developer To Reproduce' to: 'Needs Triage'

Changed status from 'Needs Developer To Reproduce' to: 'Needs Triage'
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

This is working fine for moving objects:
#72889.blend

Should be working (78c2063), so assume this is a bug...

EDIT: 78c2063 might not be related in the end, still, report looks like a bug

Can confirm, checking... This is working fine for moving objects: [#72889.blend](https://archive.blender.org/developer/F8275596/T72889.blend) Should be working (78c2063), so assume this is a bug... EDIT: 78c2063 might not be related in the end, still, report looks like a bug

This issue was referenced by blender/cycles@04fc69906e

This issue was referenced by blender/cycles@04fc69906e6534b89516474bed6c1949d876209a

This issue was referenced by 03fa66d274

This issue was referenced by 03fa66d2740c6ab10df6a86430475dfa98fc0f20

Added subscriber: @JoshuaBelanich

Added subscriber: @JoshuaBelanich

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-05-19 15:47:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72889
No description provided.