Fix T72889: Cycles camera motion blur not usng more than 2 steps

Differential Revision: https://developer.blender.org/D7782